// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-ovuCP kAwAEx aje-input__search"
  >
    <label
      class="sc-keTIit dkccZz"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-jtQUzJ hxgGmj aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-cHqXqK ZWKS"
        id="react-aria-:r5:"
        type="search"
        value=""
      />
      <button
        class="sc-khLCKb cxAeKe aje-btn sc-dstKZu ibLRha aje-btn--content is-medium"
        data-icon-button="true"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-blHHSb GNRNu aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-ovuCP kAwAEx aje-input__search"
  >
    <label
      class="sc-keTIit dkccZz"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-jtQUzJ hxgGmj aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-cHqXqK ZWKS"
        id="react-aria-:r0:"
        type="search"
        value=""
      />
      <button
        class="sc-khLCKb cxAeKe aje-btn sc-dstKZu ibLRha aje-btn--content is-medium"
        data-icon-button="true"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-blHHSb GNRNu aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
